2020-07-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Improve codes in unicode conversion and
	annotation rect calculation.
	* spc_xtx.c: Add missing reset_xgstate().
	* tt_cmap.c: Add wmode to auto-generated CMap names.

2020-07-28  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* pdfobj.c: Simple modifications for LIBDPX.

2020-07-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_write.c: Change ariable names.
	* dvipdfmx.c: Remove unused variables. Modify init sequence.
	Page size specified as a command line option overwrites
	settings specified by pagesize specials.
	* pdfdev.[ch], pdfdoc.[ch], pdfencrypt.[ch], pdfobj.[ch]:
	File static variables are now placed in a single struct.
	* pdfparse.[ch], spc_pdfm.c: PDF parse object function is
	called with a callback function to be called when an object of
	unknown type is encountered.
	* pdfximage.c: Do not include an unnecessary file.
	* dpxconf.[ch], xbb.c: Add is_xbb in dpx_conf.
	* dpxutil.[ch], dvi.c, dvipdfmx.c: Add dpx_util_read_length().
	* configure.ac: Version 20200726.

2020-07-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c: Fix a bug introduced in rev.37144 that generated
	CIDType0 font file is corrupt when the "force fixed-pitch"
	option is enabled.
	* pdfximage.c: "filename" was wrongly used for cached converted
	PS images.

2020-07-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.[ch], pdfnames.[ch], pdfobj.c, pdfximage.[ch],
	spc_dvips.c, spc_html.c, spc_misc.c, spc_pdfm.c, specials.c:
	"Forward reference" of image objects is also supported.
	Object reference by name is now available globally but not
	only for the "special" module.
	* configure.ac: Version 20200721.

2020-07-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdraw.c: Avoid invoking gs operation for an empty ExtGState.

2020-07-18  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c, pdfximage.[ch]: Don't call ordinary functions